# time_kill

./: .gitignore  CMakeLists.txt  README.md  convert_shaders.cmd  convert_shaders.sh
docs/: nodes-concept.cpp  vulkan-example-rendering.md  vulkan-roadmap.md
examples/basic_window/: CMakeLists.txt  main.cpp
examples/vulkan_window/: CMakeLists.txt  main.cpp
scripts/: convert_shader.py
src/: CMakeLists.txt  prerequisites.hpp
src/core/: logger.cpp  logger.hpp  window.cpp  window.hpp  window_config.hpp
src/graphics/: graphic_types.hpp  vulkan_configuration.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.hpp  vulkan_mappings.cpp  vulkan_mappings.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_resources.cpp  vulkan_resources.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_tools.cpp  vulkan_tools.hpp
src/utils/: string_utils.cpp  string_utils.hpp
